# Plastic

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  plastic.sh  readme.txt
Plastic_DirectX/: CMakeLists.txt  linux.cpp
Plastic_DirectX/copy/: config.xml
Plastic_DirectX/include/: plastic_camera.h  plastic_dx.h  plastic_dx_class.h  plastic_dx_glfwinput.h  plastic_model_class.h  plastic_shader_class.h
Plastic_DirectX/src/: main.cpp  plastic_camera.cpp  plastic_dx.cpp  plastic_dx_class.cpp  plastic_model_class.cpp  plastic_shader_class.cpp
Plastic_OpenGL/: CMakeLists.txt
Plastic_OpenGL/include/: plastic_opengl.h  plastic_opengl_camera.h  plastic_opengl_class.h  plastic_opengl_glfwinput.h  plastic_opengl_shader.h
Plastic_OpenGL/include/glad/: glad.h
Plastic_OpenGL/src/: glad.c  main.cpp  plastic_opengl.cpp  plastic_opengl_camera.cpp  plastic_opengl_class.cpp  plastic_opengl_shader.cpp
Plastic_Vulkan/: CMakeLists.txt
Plastic_shared/: CMakeLists.txt
Plastic_shared/include/: loadxml.h  plastic_core.h  plastic_input_utils.h
Plastic_shared/src/: loadxml.cpp
